# API-CUIT-TGP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: cuit.py
app/core/: config.py  dependencies.py  scraper.py  scraper_impl.py
app/schemas/: cuit.py
tests/: conftest.py
